Trying to get css icons to work

--- a/source/_brandIcons.erb
+++ b/source/_brandIcons.erb
@@ -2,17 +2,17 @@
 	<div class="container">
 		<ul class="clients-grid grid-6 nobottommargin clearfix">
 			<li><i class="devicon-amazonwebservices-plain-wordmark colored"></i></li>
-			<li><a href="http://logofury.com"><img src="images/clients/2.png" alt="Clients"></a></li>
-			<li><a href="http://logofaves.com/2014/03/grabbt/"><img src="images/clients/3.png" alt="Clients"></a></li>
-			<li><a href="http://logofaves.com/2014/01/ladera-granola/"><img src="images/clients/4.png" alt="Clients"></a></li>
-			<li><a href="http://logofaves.com/2014/02/hershel-farms/"><img src="images/clients/5.png" alt="Clients"></a></li>
-			<li><a href="http://logofury.com/logo/food-fight-radio.html"><img src="images/clients/6.png" alt="Clients"></a></li>
-			<li><a href="http://logofury.com"><img src="images/clients/7.png" alt="Clients"></a></li>
-			<li><a href="http://logofury.com/logo/up-travel.html"><img src="images/clients/8.png" alt="Clients"></a></li>
-			<li><a href="http://logofury.com/logo/caffi-bardi.html"><img src="images/clients/9.png" alt="Clients"></a></li>
-			<li><a href="http://logofury.com/logo/bignix-design.html"><img src="images/clients/10.png" alt="Clients"></a></li>
-			<li><a href="http://logofury.com/"><img src="images/clients/11.png" alt="Clients"></a></li>
-			<li><a href="http://logofury.com/"><img src="images/clients/12.png" alt="Clients"></a></li>
+			<li><a href="http://logofury.com"><%= image_tag "images/clients/2.png" %></a></li>
+			<li><a href="http://logofaves.com/2014/03/grabbt/"><%= image_tag "images/clients/3.png" %></a></li>
+			<li><a href="http://logofaves.com/2014/01/ladera-granola/"><%= image_tag "images/clients/4.png" %></a></li>
+			<li><a href="http://logofaves.com/2014/02/hershel-farms/"><%= image_tag "images/clients/5.png" %></a></li>
+			<li><a href="http://logofury.com/logo/food-fight-radio.html"><%= image_tag "images/clients/6.png" %></a></li>
+			<li><a href="http://logofury.com"><%= image_tag "images/clients/7.png" %></a></li>
+			<li><a href="http://logofury.com/logo/up-travel.html"><%= image_tag "images/clients/8.png" %></a></li>
+			<li><a href="http://logofury.com/logo/caffi-bardi.html"><%= image_tag "images/clients/9.png" %></a></li>
+			<li><a href="http://logofury.com/logo/bignix-design.html"><%= image_tag "images/clients/10.png" %></a></li>
+			<li><a href="http://logofury.com/"><%= image_tag "images/clients/11.png" %></a></li>
+			<li><a href="http://logofury.com/"><%= image_tag "images/clients/12.png" %></a></li>
 		</ul>
 	</div><!-- /.container -->
 </section><!-- /.section -->
