--- a/source/_work.erb
+++ b/source/_work.erb
@@ -24,7 +24,7 @@
 
       <!-- Item 1 -->
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix graphics" data-my-order="3">
-        <div class="portfolio-image-holder"><img src="work/1.png" alt="1" class="img-responsive portfolio-image"></div>
+        <div class="portfolio-image-holder"><%= image_tag "work/1.png", :class => 'img-responsive portfolio-image' %></div>
         <span class="portfolio-badge badge">PHP</span>
         <span class="portfolio-hover">
 						<span>
@@ -41,7 +41,7 @@
 
       <!-- Item 2 -->
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix print identity" data-my-order="6">
-        <div class="portfolio-image-holder"><img src="/work/2.png" alt="2" class="img-responsive portfolio-image"></div>
+        <div class="portfolio-image-holder"><%= image_tag "work/2.png", :class => 'img-responsive portfolio-image' %></div>
         <span class="portfolio-badge badge">PHP</span>
         <span class="portfolio-hover">
 						<span>
@@ -58,7 +58,7 @@
 
       <!-- Item 3 -->
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix identity" data-my-order="4">
-        <div class="portfolio-image-holder"><img src="/work/3.png" alt="3" class="img-responsive portfolio-image"></div>
+        <div class="portfolio-image-holder"><%= image_tag "work/3.png", :class => 'img-responsive portfolio-image' %></div>
         <span class="portfolio-badge badge">Rails</span>
         <span class="portfolio-hover">
 						<span>
@@ -75,7 +75,7 @@
 
       <!-- Item 4 -->
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix graphics" data-my-order="5">
-        <div class="portfolio-image-holder"><img src="/work/4.png" alt="4" class="img-responsive portfolio-image"></div>
+        <div class="portfolio-image-holder"><%= image_tag "work/4.png", :class => 'img-responsive portfolio-image' %></div>
         <span class="portfolio-badge badge">Rails</span>
         <span class="portfolio-hover">
 						<span>
