--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,16 +7,25 @@
   <meta name="author" content="Vasilis Kaloidis"/>
   <meta name="description" content="Blue Helmet Software">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="apple-touch-icon" sizes="144x144" href="source/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="source/images/favicon/favicon-32x32.png?v=2">
+    <link rel="icon" type="source/image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="source/images/favicon/site.webmanifest">
+    <link rel="mask-icon" href="source/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#222222">
+    <meta name="theme-color" content="#222222">
   <title>Blue Helmet Software Company</title>
   
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
   <!-- Devicon Icons -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <%= stylesheet_link_tag "https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" %>
   
   <!-- Royal Preloader CSS -->
   <%= stylesheet_link_tag "royal_preloader" %>
   
   <!-- jQuery Files -->
-  <!-- <script type="text/javascript" src="httdp://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
+  <!-- <script type="text/javascript" src="httdp://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery' %> -->
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" %>
   
   <!-- Parallax File -->
