--- a/source/_contact.erb
+++ b/source/_contact.erb
@@ -5,20 +5,17 @@
         <h2>Contact</h2>
         <span class="section-divider mb15"></span>
         <p class="no-margin scaleReveal">Contact us using the contact form below </p>
-	      <p class="no-margin scaleReveal">Ready to grab a coffee? Call or text us at (209) 643-5638 to discuss your next project</p>
+	      <p class="no-margin scaleReveal">Ready to grab a coffee? Call or text us at (203) 578-0346 to discuss your next project</p>
 
       </div><!-- /.column -->
     </div><!-- /.row -->
     <div class="row">
-      <div class="col-sm-5 col-lg-4">
+      <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 text-center">
         <h5 class="heading-1 mb20">Visit Us</h5>
-        <h4 class="mb15">Woodbury, CT</h4>
+        <h4 class="mb15">New Haven, CT</h4>
 	      <h5 class="heading-1 mb20">Contact Us</h5>
-        <p class="text-xs-small mb5"><strong class="text-switch">Email:</strong> blue.helmet.dev@gmail.com</p>
-        <p class="text-xs-small mb5"><strong class="text-switch">Phone:</strong> +1 (209) 643-5638</p>
-      </div><!-- /.column -->
-      <div class="col-sm-6 col-lg-7 mt30-xs">
-        <%= partial 'contact_form' %>
+        <p class="text-xs-small mb5"><strong class="text-switch">Email:</strong> blue.helmet.software@gmail.com</p>
+        <p class="text-xs-small mb5"><strong class="text-switch">Phone:</strong> +1 (203) 578-0346</p>
       </div><!-- /.column -->
     </div><!-- /.row -->
   </div><!-- /.container -->
