Work done on connecting data of the work to the portfolio, and overall site updates

--- a/source/_header.erb
+++ b/source/_header.erb
@@ -12,7 +12,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand scroll-link" href="#home" data-id="home">
-            <%= link_to image_tag("logo_black.png", class: "logo1 topReveal", alt: 'Logo'), '/' %>
+            <%= link_to image_tag("logo.png", class: "logo1 topReveal", alt: 'Logo'), '/' %>
           </a>
         </div>
 
@@ -21,7 +21,6 @@
             <li><a href="#home" data-id="home" class="scroll-link">Home</a></li>
             <li><a href="#ideology" data-id="ideology" class="scroll-link">Ideology</a></li>
             <li><a href="#services" data-id="services" class="scroll-link">Services</a></li>
-            <li><a href="#packages" data-id="packages" class="scroll-link">Packages</a></li>
             <li><a href="#contact" data-id="contact" class="scroll-link">Contact</a></li>
           </ul>
         </div>
