--- a/source/_web.erb
+++ b/source/_web.erb
@@ -3,7 +3,8 @@
   <div class="services-box leftReveal">
     <span class="pe-7s-airplay services-icon"></span>
     <h3 class="service-name">1. Web Development</h3>
-    <p class="text-small">Ruby on Rails, Java, PHP, NodeJS, React, Ember. Frameworks like Bootstrap, Magento, Shopify, Wordpress
+    <p class="text-small">From simple websites to custom web-applications and contacless order fulfillment system with Square, Stripe and Venmo Integration</p>
+    <p class="text-small">Ruby on Rails, Java, PHP, NodeJS, React, Ember. Frameworks like Bootstrap, Magento, Shopify, Wordpress</p>
       <!--<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#item1-services">Info</button>-->
   </div>
 </div><!-- /.column -->
