--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,6 @@ title: Home
 
 <%#= partial 'ideology' %>
 
-<!-- Welcome + Services -->
 <section class="background1" id="ideology">
 	
 	<%= partial 'hello' %>
@@ -20,8 +19,10 @@ title: Home
 			</div>
 		</div>
 	</div>
+	
 	<%= partial 'services' %>
-</section><!-- /.section -->
+	
+</section>
 
 <%= partial 'products' %>
 
@@ -34,7 +35,7 @@ title: Home
 <%#= partial 'numbers' %>
 
 <!-- SOFTWARE PRICING -->
-<%= partial 'packages' %>
+<%#= partial 'packages' %>
 
 <%#= partial 'timeline' %>
 
