--- a/source/_hello.erb
+++ b/source/_hello.erb
@@ -6,7 +6,7 @@
         <h2 class="no-margin rotateLeftReveal">Hello.</h2>
       </div>
       <div class="col-lg-10 col-sm-9 mt30-xs">
-        <h3 class="no-margin rightReveal">We are a team of Software Engineers, Web Developers and
+        <h3 class="no-margin rightReveal">We are Software Engineers, Web Developers and
           Brand / Marketing Guru's <strong>ready to parse your Dreams, and compile them into Code</strong></h3>
       </div>
     </div><!-- /.row -->
