--- a/source/_work.erb
+++ b/source/_work.erb
@@ -1,97 +1,64 @@
 <section id="work" class="background1 section-padding-top">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 section-title text-center">
-        <h2>Work</h2>
-        <span class="section-divider mb15"></span>
-        <p class="mb30 scaleReveal">We do awesome stuff, and yeah.</p>
-      </div><!-- /.column -->
-    </div><!-- /.row -->
-    <div class="row">
-      <div class="col-xs-12 text-center mb50">
-        <!-- Filter Buttons -->
-        <button class="filter btn btn-default btn-category btn-lg" data-filter="all">All</button>
-        <button class="filter btn btn-default btn-category btn-lg" data-filter=".php">PHP</button>
-        <button class="filter btn btn-default btn-category btn-lg" data-filter=".rails">Rails</button>
-
-        <!-- Sort Buttons -->
-        <button class="sort btn btn-default btn-sort btn-lg" data-sort="my-order:asc"><span class="ion-ios-plus-empty"></span></button>
-        <button class="sort btn btn-default btn-sort btn-lg" data-sort="my-order:desc"><span class="ion-ios-minus-empty"></span></button>
-      </div><!-- /.column -->
-    </div><!-- /.row -->
-    <div style="-webkit-flex-flow: row wrap;" id="thework">
-
-
-      <!-- Item 1 -->
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix graphics" data-my-order="3">
-        <div class="portfolio-image-holder"><%= image_tag "work/1.png", :class => 'img-responsive portfolio-image' %></div>
-        <span class="portfolio-badge badge">PHP</span>
-        <span class="portfolio-hover">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 section-title text-center">
+				<h2>Work</h2>
+				<span class="section-divider mb15"></span>
+				<p class="mb30 scaleReveal">We do awesome stuff.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div style="-webkit-flex-flow: row wrap;" id="thework">
+				
+				<!-- Item 1 -->
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix graphics" data-my-order="3">
+					<div class="portfolio-image-holder"><%= image_tag "work/1.png", :class => 'img-responsive portfolio-image' %></div>
+					<span class="portfolio-badge badge">Rails</span>
+					<span class="portfolio-hover">
 						<span>
 							<a href="http://bethlehemvineyard.com" target="_blank">
 								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
-							<a href="#"  data-toggle="modal" data-target="#work-woodburyflea-modal" class="zoom" title="Bethlehem Vineyard">
-								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
-							</a>
 							<span class="project-title no-margin-bottom mt10">The Bethlehem Vineyard</span>
 						</span>
 					</span>
-      </div><!-- /.column -->
-
-      <!-- Item 2 -->
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix print identity" data-my-order="6">
-        <div class="portfolio-image-holder"><%= image_tag "work/2.png", :class => 'img-responsive portfolio-image' %></div>
-        <span class="portfolio-badge badge">PHP</span>
-        <span class="portfolio-hover">
+				</div>
+				
+				<!-- Item 2 -->
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix print identity" data-my-order="6">
+					<div class="portfolio-image-holder"><%= image_tag "work/2.png", :class => 'img-responsive portfolio-image' %></div>
+					<span class="portfolio-badge badge">Rails</span>
+					<span class="portfolio-hover">
 						<span>
 							<a href="http://woodburyflea.net/" target="_blank">
 								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
-							<a href="/work/2.png" class="zoom" title="Woodbury Flea Market">
+							<a class="btn_open_woodburyflea" title="Woodbury Flea">
 								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
 							</a>
 							<span class="project-title no-margin-bottom mt10">The Woodbury Flea Market</span>
 						</span>
 					</span>
-      </div><!-- /.column -->
-
-      <!-- Item 3 -->
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix identity" data-my-order="4">
-        <div class="portfolio-image-holder"><%= image_tag "work/3.png", :class => 'img-responsive portfolio-image' %></div>
-        <span class="portfolio-badge badge">Rails</span>
-        <span class="portfolio-hover">
+				</div>
+				
+				<!-- Item 3 -->
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix identity" data-my-order="4">
+					<div class="portfolio-image-holder"><%= image_tag "work/3.png", :class => 'img-responsive portfolio-image' %></div>
+					<span class="portfolio-badge badge">Rails</span>
+					<span class="portfolio-hover">
 						<span>
-							<a href="https://athankaloidis.com/" target="_blank">
+							<a href="https://www.athankaloidis.com/" target="_blank">
 								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
-							<a href="/work/3.png" class="zoom" title="Athan Kaloidis Memorial">
-								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
+							<a href="http://vkaloidis.herokuapp.com/p/raw/akmemorial" class="view_work" id="akmemorial_modal" title="Athan Kaloidis Memorial Foundation">
+									<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
 							</a>
 							<span class="project-title no-margin-bottom mt10">Athan Kaloidis Memorial Foundation</span>
 						</span>
 					</span>
-      </div><!-- /.column -->
-
-      <!-- Item 4 -->
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix graphics" data-my-order="5">
-        <div class="portfolio-image-holder"><%= image_tag "work/4.png", :class => 'img-responsive portfolio-image' %></div>
-        <span class="portfolio-badge badge">Rails</span>
-        <span class="portfolio-hover">
-						<span>
-							<a href="https://highland-brass.herokuapp.com" target="_blank">
-								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
-							</a>
-							<a href="/work/4.png" class="zoom" title="Highland Brass Co.">
-								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
-							</a>
-							<span class="project-title no-margin-bottom mt10">Highland Brass Co.</span>
-						</span>
-					</span>
-      </div><!-- /.column -->
-
-
-    </div><!-- /.row -->
-  </div><!-- /.container -->
-</section><!-- /.section -->
-<!-- Begin Work -->
+				</div>
+				
+			</div>
+		</div>
+	</div>
+</section>
