--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,80 +1,113 @@
 <!doctype html>
 <html>
-  <head>
-    <title><%= current_page.data.title || "Blue Helmet Software" %></title>
-<meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-  <meta name="author" content="Vasilis Kaloidis"/>
-  <meta name="description" content="Blue Helmet Software">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="apple-touch-icon" sizes="144x144" href="source/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="source/images/favicon/favicon-32x32.png?v=2">
-    <link rel="icon" type="source/image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="source/images/favicon/site.webmanifest">
-    <link rel="mask-icon" href="source/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#222222">
-    <meta name="theme-color" content="#222222">
-  <title>Blue Helmet Software Company</title>
-  
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<head>
+	<title><%= current_page.data.title || "Blue Helmet Software" %></title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+	<meta name="author" content="Vasilis Kaloidis"/>
+	<meta name="description" content="Blue Helmet Software">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="apple-touch-icon" sizes="144x144" href="source/images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="source/images/favicon/favicon-32x32.png?v=2">
+	<link rel="icon" type="source/image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="source/images/favicon/site.webmanifest">
+	<link rel="mask-icon" href="source/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#222222">
+	<meta name="theme-color" content="#222222">
+	<title>Blue Helmet Software Company</title>
+	
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	
+	<!-- Devicon Icons -->
+	<%= stylesheet_link_tag "https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" %>
+	
+	<!-- Royal Preloader CSS -->
+	<%= stylesheet_link_tag "royal_preloader" %>
+	
+	<!-- jQuery Files -->
+	<!-- <script type="text/javascript" src="httdp://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery' %> -->
+	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" %>
+	
+	<%= javascript_include_tag "application.js" %>
+	
+	<script type="text/javascript">
+		$('.btn_open_woodburyflea').click(function () {
+			console.log("We detected the click")
+			// Send the src on click of button to the iframe. Which will make it load.
+			$(".modal_content").find('iframe').attr("src", "http://vkaloidis.herokuapp.com/p/raw/woodburyflea");
+			$('.modal').modal({show: true});
+			// Hide the loading message
+			$(".modal_content").find('iframe').load(function () {
+				$('.loading').hide();
+			});
+		})
+	</script>
+	
+	<!-- Parallax File -->
+	<%= javascript_include_tag "parallax.min.js" %>
+	<%#= javascript_include_tag "drift.js" %>
+	
+	<!-- Royal Preloader -->
+	<%= javascript_include_tag "royal_preloader.min.js" %>
+	
+	<!-- TODO: Move this into a javascript file-->
+	<script type="text/javascript">
+		Royal_Preloader.config({
+			mode: 'number',
+			showProgress: false,
+			background: '#1d1d1d'
+		});
+	</script>
+	
+	<!-- Stylesheets -->
+	<%= stylesheet_link_tag "bootstrap.css" %>
+	<%= stylesheet_link_tag "ionicons.css" %>
+	<%= stylesheet_link_tag "pe-icon-7-stroke.css" %>
+	<%= stylesheet_link_tag "magnific-popup.css" %>
+	<%= stylesheet_link_tag "logoiconfont.css" %>
+	<%= stylesheet_link_tag "style.css" %>
+	<%#= stylesheet_link_tag "colors/seagul.css" %>
+	<%= stylesheet_link_tag "base-light.css" %>
+	
+	
+	<!--<link type="text/css" href="css/colors/blue.css" />-->
+	<!--<link type="text/css" href="base-light.css" />-->
+	<!--<link rel="alternate .cssstylesheet" type="text/css" href="css/colors/green.css" title="green">-->
+	<!--<link rel="alternate stylesheet" type="text/css" href="css/colors/orange.css" title="orange">-->
+	<!--<link rel="alternate stylesheet" type="text/css" href="css/colors/red.css" title="red">-->
+	<!--<link rel="alternate stylesheet" type="text/css" href="css/colors/orangelight.css" title="orangelight">-->
+	<!--<link rel="alternate stylesheet" type="text/css" href="css/colors/pinkish.css" title="pinkish">-->
+	<!--<link rel="alternate stylesheet" type="text/css" href="css/colors/seagul.css" title="seagul">-->
+	
+	<%= stylesheet_link_tag 'application', media: "all" %>
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36624287-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		
+		gtag('js', new Date());
+		
+		gtag('config', 'UA-36624287-2');
+	</script>
+	
+	<script type="text/javascript">
 
-  <!-- Devicon Icons -->
-  <%= stylesheet_link_tag "https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" %>
-  
-  <!-- Royal Preloader CSS -->
-  <%= stylesheet_link_tag "royal_preloader" %>
-  
-  <!-- jQuery Files -->
-  <!-- <script type="text/javascript" src="httdp://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery' %> -->
-  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" %>
-  
-  <!-- Parallax File -->
-  <%= javascript_include_tag "parallax.min.js" %>
-  <%#= javascript_include_tag "drift.js" %>
-  
-  <!-- Royal Preloader -->
-  <%= javascript_include_tag "royal_preloader.min.js" %>
-  
-  <script type="text/javascript">
-    Royal_Preloader.config({
-      mode: 'number',
-      showProgress: false,
-      background: '#1d1d1d'
-    });
-  </script>
-  
-  <!-- Stylesheets -->
-  <%= stylesheet_link_tag "bootstrap.css" %>
-  <%= stylesheet_link_tag "fonts/ionicons.css" %>
-  <%= stylesheet_link_tag "pe-icon-7-stroke.css" %>
-  <%= stylesheet_link_tag "magnific-popup.css" %>
-  <%= stylesheet_link_tag "logoiconfont.css" %>
-  <%= stylesheet_link_tag "style.css" %>
-  <%= stylesheet_link_tag "colors/blue.css" %>
-  <%#= stylesheet_link_tag "base-light.css" %>
-  
-  
-  <!--<link type="text/css" href="css/colors/blue.css" />-->
-  <!--<link type="text/css" href="base-light.css" />-->
-  <!--<link rel="alternate .cssstylesheet" type="text/css" href="css/colors/green.css" title="green">-->
-  <!--<link rel="alternate stylesheet" type="text/css" href="css/colors/orange.css" title="orange">-->
-  <!--<link rel="alternate stylesheet" type="text/css" href="css/colors/red.css" title="red">-->
-  <!--<link rel="alternate stylesheet" type="text/css" href="css/colors/orangelight.css" title="orangelight">-->
-  <!--<link rel="alternate stylesheet" type="text/css" href="css/colors/pinkish.css" title="pinkish">-->
-  <!--<link rel="alternate stylesheet" type="text/css" href="css/colors/seagul.css" title="seagul">-->
+	</script>
 
-  <%= stylesheet_link_tag 'application', media: "all" %>
+</head>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-36624287-2"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+	<div class="modal-dialog modal-lg" role="document">
+		<div id="modal_content" class="modal-content">
+			<iframe></iframe>
+		</div>
+	</div>
+</div>
 
-      gtag('config', 'UA-36624287-2');
-  </script>
-
-  </head>
 <body class="royal_preloader" data-spy="scroll" data-target=".navbar" data-offset="70">
 
 <div id="royal_preloader"></div>
@@ -86,21 +119,21 @@
 <%= yield %>
 
 <footer class="footer-padding background2">
-  <div class="container">
-    <div class="row no-margin-bottom">
-      <div class="text-center no-margin-bottom">
-        <button type="button" class="btn btn-primary btn-up-footer btn-lg scroll-top">Up</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="text-small text-center">
-        <hr>
-        <div class="row">
-          <p class="no-margin">&copy; Blue Helmet Software Company</p>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row no-margin-bottom">
+			<div class="text-center no-margin-bottom">
+				<button type="button" class="btn btn-primary btn-up-footer btn-lg scroll-top">Up</button>
+			</div>
+		</div>
+		<div class="row">
+			<div class="text-small text-center">
+				<hr>
+				<div class="row">
+					<p class="no-margin">&copy; Blue Helmet Software Company</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
 
 <%= javascript_include_tag "bootstrap.min.js" %>
@@ -113,15 +146,6 @@
 <%= javascript_include_tag "form-validator.min.js" %>
 <%= javascript_include_tag "jquery.inview.min.js" %>
 <%= javascript_include_tag "jquery.countTo.js" %>
-<script type="text/javascript">
-  /* ---- Counter (our count) ---- */
-  $('#ourcount').one('inview', function (event, isInView) {
-    if(isInView) {
-      $('.timer').countTo({speed: 3000});
-    }
-  });
-</script>
-
 <%= javascript_include_tag "jquery.magnific-popup.min.js" %>
 <%= javascript_include_tag "scrollreveal.min.js" %>
 <%= javascript_include_tag "main.js" %>
