--- a/source/_work.erb
+++ b/source/_work.erb
@@ -1,3 +1,4 @@
+
 <section id="work" class="background1 section-padding-top">
 	<div class="container-fluid">
 		<div class="row">
@@ -10,7 +11,6 @@
 		<div class="row">
 			<div style="-webkit-flex-flow: row wrap;" id="thework">
 				
-				<!-- Item 1 -->
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix graphics" data-my-order="3">
 					<div class="portfolio-image-holder"><%= image_tag "work/1.png", :class => 'img-responsive portfolio-image' %></div>
 					<span class="portfolio-badge badge">Rails</span>
@@ -19,12 +19,15 @@
 							<a href="http://bethlehemvineyard.com" target="_blank">
 								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
+							
+							<a onclick="open_work_modal('bhemvineyard', 'The Bethlehem Vineyard', 'https://www.bethlehemvineyard.com')" title="The Bethlehem Vineyard">
+								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
+							</a>
 							<span class="project-title no-margin-bottom mt10">The Bethlehem Vineyard</span>
 						</span>
 					</span>
 				</div>
 				
-				<!-- Item 2 -->
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix print identity" data-my-order="6">
 					<div class="portfolio-image-holder"><%= image_tag "work/2.png", :class => 'img-responsive portfolio-image' %></div>
 					<span class="portfolio-badge badge">Rails</span>
@@ -33,7 +36,7 @@
 							<a href="http://woodburyflea.net/" target="_blank">
 								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
-							<a class="btn_open_woodburyflea" title="Woodbury Flea">
+							<a onclick="open_work_modal('woodburyflea', 'The Woodbury Flea market', 'https://www.woodburyflea.net')" title="The Woodbury Flea Market">
 								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
 							</a>
 							<span class="project-title no-margin-bottom mt10">The Woodbury Flea Market</span>
@@ -41,7 +44,6 @@
 					</span>
 				</div>
 				
-				<!-- Item 3 -->
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix identity" data-my-order="4">
 					<div class="portfolio-image-holder"><%= image_tag "work/3.png", :class => 'img-responsive portfolio-image' %></div>
 					<span class="portfolio-badge badge">Rails</span>
@@ -50,7 +52,7 @@
 							<a href="https://www.athankaloidis.com/" target="_blank">
 								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
-							<a href="http://vkaloidis.herokuapp.com/p/raw/akmemorial" class="view_work" id="akmemorial_modal" title="Athan Kaloidis Memorial Foundation">
+							<a onclick="open_work_modal('akmemorial', 'The Athan Kaloidis Memorial Foundation', 'https://www.athankaloidis.com')" title="Athan Kaloidis Memorial Foundation">
 									<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
 							</a>
 							<span class="project-title no-margin-bottom mt10">Athan Kaloidis Memorial Foundation</span>
