--- a/source/stylesheets/application.css
+++ b/source/stylesheets/application.css
@@ -66,11 +66,70 @@ small {
     background: #5bc0de!important;
 }
 
-
-
 .update-nag > .update-text{
     line-height: 19px;
     padding-top: 11px;
     padding-left: 45px;
     padding-right: 20px;
+}
+
+/*.modal-dialog {*/
+/*    width: 90%;*/
+/*    height: 90%;*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*}*/
+
+.modal-content {
+    height: auto;
+    min-height: 100%;
+}
+
+.modal-lg {
+    width: 98%;
+    height:95%;
+    margin-top:10px;
+}
+
+.modal-header {
+    height:50px;
+}
+
+span.modal-icon {
+    font-size: 1.7em;
+    margin-top:2px;
+}
+
+.modal-header {
+    padding:10px 0px 0px 0px;
+}
+
+h4.service-title {
+    font-size: 1.6em;
+    margin-top: 0px;
+}
+
+#work-modal-iframe {
+    width:100%;
+    border: 1px solid #4443;
+}
+
+#work-modal-body {
+    padding:10px;
+}
+
+.modal-header {
+    outline: none;
+}
+
+.modal-backdrop {
+    z-index: -1;
+}
+.pe-7s-anchor.services-icon-2.modal-icon {
+    margin-left:20px;
+}
+
+button.close {
+    margin:0px;
+    padding-right:10px
 }
