Updated website work section to correclty display portfolio work, and UI content fixes

--- a/source/_contact.erb
+++ b/source/_contact.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 section-title text-center">
         <h2>Contact</h2>
         <span class="section-divider mb15"></span>
-        <p class="no-margin scaleReveal">Give us a call, or send us a text or email to discuss your next project! </p>
+        <p class="no-margin scaleReveal">Give us a call, send us a text or write us an email to discuss how we can turn your dream into a reality! </p>
 
       </div><!-- /.column -->
     </div><!-- /.row -->
