--- a/source/_header.erb
+++ b/source/_header.erb
@@ -19,8 +19,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home" data-id="home" class="scroll-link">Home</a></li>
-            <li><a href="#ideology" data-id="ideology" class="scroll-link">Ideology</a></li>
-            <li><a href="#services" data-id="services" class="scroll-link">Services</a></li>
+            <li><a href="#process" data-id="ideology" class="scroll-link">The Process</a></li>
+            <li><a href="#services" data-id="services" class="scroll-link">Products</a></li>
+            <li><a href="#work" data-id="work" class="scroll-link">Our Work</a></li>
             <li><a href="#contact" data-id="contact" class="scroll-link">Contact</a></li>
           </ul>
         </div>
