--- a/source/_ideology.erb
+++ b/source/_ideology.erb
@@ -11,7 +11,7 @@
         <div class="col-lg-10 col-sm-9 mt30-xs">
           <h3 class="no-margin rightReveal">
             We are a team of Software Engineers, Web Developers, Designers and Social Media Experts.
-            <strong> We will deliver you a beautiful product, garunteed..</strong>.</h3>
+            <strong> We will deliver you beautiful software, guaranteed!</strong>.</h3>
         </div>
       </div><!-- /.row -->
     </div><!-- /.container -->
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h4 class="no-margin">Our Ideology</h4>
+          <h4 class="no-margin">Our Process</h4>
         </div>
       </div><!-- /.row -->
     </div><!-- /.container -->
