--- a/source/_products.erb
+++ b/source/_products.erb
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 section-title text-center">
-				<h2>Products + Services</h2>
+				<h2>Products</h2>
 				<span class="section-divider"></span>
 			</div>
 		</div>
