--- a/source/_services.erb
+++ b/source/_services.erb
@@ -5,15 +5,14 @@
       <div class="col-sm-4 col-md-4 col-lg-4 process-box text-center pt50 pb50">
         <div class="leftReveal">
           <div class="process-intro">
-            <h3 class="process-number">01-Dev</h3>
+            <h3 class="process-number">01-Meet</h3>
             <div><span class="process-icons pe-7s-users rotateBottomReveal"></span></div>
-            <h2>Mobile<br></h2>
+            <h2>Meet<br></h2>
           </div>
           <div class="process-content">
             <div><span class="process-icons pe-7s-users"></span></div>
-            <h2 class="mt15 mb20">Mobile App <br>Development</h2>
-            <p class="no-margin">Native iOS and Android App Development.
-              Apps written for use on Phones, Tablets, Watches, TV's, Refrigerators etc...</p>
+            <h2 class="mt15 mb20">Meet in <br>Person</h2>
+            <p class="no-margin">Discuss your project, expectations and create a project plan for your budget.</p>
           </div>
         </div><!-- /.animation -->
       </div><!-- /.column -->
@@ -22,13 +21,12 @@
           <div class="process-intro">
             <h3 class="process-number">02-Dev</h3>
             <div><span class="process-icons pe-7s-diamond rotateBottomReveal"></span></div>
-            <h2>Software<br></h2>
+            <h2>Code<br></h2>
           </div>
           <div class="process-content">
             <div><span class="process-icons pe-7s-diamond"></span></div>
-            <h2 class="mt15 mb20">Desktop + Web<br> Development</h2>
-            <p class="no-margin">Software Engineers with years of experience Developing Enterprise
-            Software.</p>
+            <h2 class="mt15 mb20">Write The<br> Code</h2>
+            <p class="no-margin">We turn your dreams into code. Delivering your project in pre-planned phases, ensuring milestones are met and satisfaction is guaranteed.</p>
           </div>
         </div><!-- /.animation -->
       </div><!-- /.column -->
@@ -42,8 +40,7 @@
           <div class="process-content">
             <div><span class="process-icons pe-7s-rocket"></span></div>
             <h2 class="mt15 mb20">Social Media + Marketing Campaigns</h2>
-            <p class="no-margin">We are pro's at Social Media.
-              Let's introduce you to the world.</p>
+            <p class="no-margin">Introduce your product to the world and drive users and revenue to your site!</p>
           </div>
         </div><!-- /.animation -->
       </div><!-- /.column -->
