--- a/source/_work.erb
+++ b/source/_work.erb
@@ -11,17 +11,17 @@
 		<div class="row">
 			<div style="-webkit-flex-flow: row wrap;" id="thework">
 				
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix graphics" data-my-order="3">
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 portfolio-box no-padding mix identity" data-my-order="3">
 					<div class="portfolio-image-holder"><%= image_tag "work/1.png", :class => 'img-responsive portfolio-image' %></div>
-					<span class="portfolio-badge badge">Rails</span>
+					<span class="portfolio-badge badge" style="color:#d53536">Rails</span>
 					<span class="portfolio-hover">
 						<span>
-							<a href="http://bethlehemvineyard.com" target="_blank">
-								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
-							</a>
+<!--							<a href="http://bethlehemvineyard.com" target="_blank">-->
+<!--								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>-->
+<!--							</a>-->
 							
 							<a onclick="open_work_modal('bhemvineyard', 'The Bethlehem Vineyard', 'https://www.bethlehemvineyard.com')" title="The Bethlehem Vineyard">
-								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
+								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
 							<span class="project-title no-margin-bottom mt10">The Bethlehem Vineyard</span>
 						</span>
@@ -33,11 +33,11 @@
 					<span class="portfolio-badge badge">Rails</span>
 					<span class="portfolio-hover">
 						<span>
-							<a href="http://woodburyflea.net/" target="_blank">
-								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
-							</a>
+<!--							<a href="http://woodburyflea.net/" target="_blank">-->
+<!--								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>-->
+<!--							</a>-->
 							<a onclick="open_work_modal('woodburyflea', 'The Woodbury Flea market', 'https://www.woodburyflea.net')" title="The Woodbury Flea Market">
-								<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
+								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
 							<span class="project-title no-margin-bottom mt10">The Woodbury Flea Market</span>
 						</span>
@@ -49,11 +49,11 @@
 					<span class="portfolio-badge badge">Rails</span>
 					<span class="portfolio-hover">
 						<span>
-							<a href="https://www.athankaloidis.com/" target="_blank">
-								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
-							</a>
+<!--							<a href="https://www.athankaloidis.com/" target="_blank">-->
+<!--								<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>-->
+<!--							</a>-->
 							<a onclick="open_work_modal('akmemorial', 'The Athan Kaloidis Memorial Foundation', 'https://www.athankaloidis.com')" title="Athan Kaloidis Memorial Foundation">
-									<span class="portfolio-links"><span class="ion-arrow-expand portfolio-links-icons"></span></span>
+									<span class="portfolio-links"><span class="ion-ios-arrow-right portfolio-links-icons"></span></span>
 							</a>
 							<span class="project-title no-margin-bottom mt10">Athan Kaloidis Memorial Foundation</span>
 						</span>
