--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,6 +21,7 @@
 	<%= stylesheet_link_tag "https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css" %>
 	
 	<%= stylesheet_link_tag "royal_preloader" %>
+	<%= stylesheet_link_tag "spinner" %>
 	
 	<!-- <script type="text/javascript" src="httdp://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery' %> -->
 	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" %>
@@ -29,23 +30,28 @@
 	
 	<script type="text/javascript">
 		function open_work_modal(short_name, pretty_name, visit_url) {
-			project_url = 'http://vkaloidis.herokuapp.com/p/raw/'.concat(short_name)
+			$("#work_spinner").show();
+			project_url = 'https://vkaloidis.herokuapp.com/p/raw/'.concat(short_name)
 			$("#modal_title").text(pretty_name);
-			// e.preventDefault();
 			$("#work-modal-iframe").attr("src", project_url);
 			$('.work-modal').appendTo("body").modal('show');
 			$('#visit_project_link').attr("href", (visit_url));
-			$("#work-modal-iframe").load(function () {
-				$('.loading').hide();
-			});
 		}
+		
+		$('#work-modal-iframe').on( 'load', function() {
+			console.log("Modal loaded");
+		} );
+		
 		function resize_work_iframe() {
-			$("#work-modal-iframe").height($("#work_modal_content").height()-25);
+			$("#work-modal-iframe").height($("#work_modal_content").height());
+			$("#work_spinner").hide();
+			$("#work-modal-iframe").show();
 		}
+	
 	</script>
 	
 	<%= javascript_include_tag "parallax.min.js" %>
-	<%#= javascript_include_tag "drift.js" %>
+	<%= javascript_include_tag "drift.js" %>
 	
 	<%= javascript_include_tag "royal_preloader.min.js" %>
 	
@@ -67,7 +73,6 @@
 	<%= stylesheet_link_tag "base-light.css" %>
 	<%= stylesheet_link_tag "application.css" %>
 	
-	
 	<!-- css/colors/blue.css -->
 	<!-- base-light.css -->
 	<!-- css/colors/green.css -->
@@ -77,27 +82,7 @@
 	<!-- css/colors/pinkish.css -->
 	<!-- css/colors/seagul.css -->
 	
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36624287-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		
-		gtag('js', new Date());
-		gtag('config', 'UA-36624287-2');
-	</script>
-	
-	<script type="text/javascript">
-      $('#work-modal-iframe').load(function() {
-      	consoel.log("Resizing iframe")
-          // this.style.height = this.contentWindow.document.body.offsetHeight + 'px';
-      });
-	</script>
-	
-</head>
-	<%= partial 'work_modal' %>
+<%= partial 'work_modal' %>
 
 <body class="royal_preloader" data-spy="scroll" data-target=".navbar" data-offset="70">
 
@@ -116,14 +101,14 @@
 				<button type="button" class="btn btn-primary btn-up-footer btn-lg scroll-top">Up</button>
 			</div>
 		</div>
-		<div class="row">
-			<div class="text-small text-center">
-				<hr>
-				<div class="row">
-					<p class="no-margin">&copy; Blue Helmet Software Company</p>
-				</div>
-			</div>
-		</div>
+<!--		<div class="row">-->
+<!--			<div class="text-small text-center">-->
+<!--				<hr>-->
+<!--				<div class="row">-->
+<!--					<p class="no-margin">&copy; Blue Helmet Software Company</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
 	</div>
 </footer>
 
